--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
 <body>
-<p>Hello World!</p>
+  
+<h1>Hello World!</h1>
+<p>This will be my personal website. Stay tuned!</p>
+  
 </body>
 </html>
 
