--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   
 <h1>Hello World!</h1>
-<p>This will be my personal website. Stay tuned!</p>
+<p>This will be my personal website.</p>
   
 </body>
 </html>
