--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   
 <h1>Hello World!</h1>
-<p>This will be my personal website.</p>
+<p>This will be my personal website. At the moment, only my <a href="">CV</a>a> is visible to the world wide web.</p>
   
 </body>
 </html>
