--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <body>
   
 <h1>Hello World!</h1>
-<p>You have just reached one end of the internet. Congratulations! By the moment you have clicked on this website, the downlaod of the whole internet was initialised. As this may take a while, please feel free to have a look at my CV.</p>
+  
+<p>You have just reached one end of the internet. Congratulations! By the moment you have clicked on this website, the download of the whole internet was initialised.</p> 
+  
+<p>As this may take a while, please feel free to have a look at my CV.</p>
   
 </body>
 </html>
