--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   
 <h1>Hello World!</h1>
   
-<p>You have just reached one end of the internet. Congratulations! By the moment you have clicked on this website, the download of the whole internet was initialised.</p> 
+<p>You have just reached one end of the internet. Congratulations!</p>
+
+<p>By the moment you have clicked on this website, the download of the whole internet was initialised.</p> 
   
 <p>As this may take a while, please feel free to have a look at my CV.</p>
   
