--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <p>By the moment you have clicked on this website, the download of the whole internet was initialised.</p> 
   
-<p>As this may take a while, please feel free to have a look at my CV.</p>
+<p>As this may take a while, please feel free to have a look at my <a href= "https://github.com/paulrudolfgoepfert/Website/blob/65aca365915c67c9d5d4eb95f52838c3e4c3749c/CurriculumVitaePaulG%C3%B6pfert.pdf">CV</a>.</p>
   
 </body>
 </html>
